--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume/CV Design</title>
-    <link rel="stylesheet" href="icons.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./icons.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
 
