--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
                     <div class="info">
                         <div class="third"></div>
                         <p class="semi-bold">ITMO University</p>
-                        <p>Organization of IT Event: 24 Workshops and Lectures, 780 total registrations
+                        <p>Mentoring and supervising 4 groups of students in a creative technology course 
+                            Organization of IT Event: 24 Workshops and Lectures, 780 total registrations
                             Management and development of a narrative telegram bot.
-                            Management and development of a media product for the Museum of the History of Religion (Figma)
+                            Management and development of a media product for the Museum of the History of Religion (HTML, CSS, Figma)
                             Working in the international media-project "Cultures of Remembrance" (Germany)</p>
                     </div>
                 </li>
