--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                     </li>
                 </ul>
                 <br>
-                <button class="fun">Message me</button>
+                <form action="https://t.me/DanilaBulavkin">
+                    <button class="fun">Message me</button>
+                </form>
             </div>
         </div>
     </div>
@@ -160,11 +162,12 @@
                     <div class="info">
                         <div class="third"></div>
                         <p class="semi-bold">ITMO University</p>
-                        <p>Mentoring and supervising 4 groups of students in a creative technology course 
-                            Organization of IT Event: 24 Workshops and Lectures, 780 total registrations
-                            Management and development of a narrative telegram bot.
-                            Management and development of a media product for the Museum of the History of Religion (HTML, CSS, Figma)
-                            Working in the international media-project "Cultures of Remembrance" (Germany)</p>
+                        <p> Management and development of a <a
+                                href="https://www.figma.com/community/file/1035194220752043959">media product</a> for the Museum of the History of Religion (work in progress), Internship<br>
+                            Organization of <a href="https://dh.itmo.ru/spbdhweek">IT Event</a>: 24 Workshops and Lectures, 780 total registrations<br>
+                            Working in the international media-project <a href="https://cultures-of-remembrance.com/">"Cultures of Remembrance" </a>(Berlin)<br>
+                            Management and development of a narrative telegram bot<br>
+                            Supervising 4 groups of students in a creative technology course<br></p>
                     </div>
                 </li>
             </ul>
@@ -179,28 +182,23 @@
                     <div class="info">
                         <p class="semi-bold">Tomsk State University</p>
                         <p>Philosophy (Ontology and Theory of Knowledge)</p>
+                        <p>Oxford Russian Scholarship Fund Fellow</p>
                     </div>
                 </li>
                 <li>
                     <div class="date">2020 - 2022</div>
                     <div class="info">
+                        <div class="info2"></div>
                         <p class="semi-bold">ITMO University (Saint-Petersburg)</p>
                         <p>Data, Culture and Visualization (Cultural Analytics)</p>
+                        <p>Participation in grant research projects (<a href="https://drive.google.com/drive/folders/1Cv1uXOTyI2d4WdtQoEgVLgNQ2CBNLNd-?usp=sharing">NLP, Data analysis,</a>
+                            <a href="https://dh-abstracts.library.cmu.edu/works/9463">Computer Vision (Ottawa)</a>)</p>
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="resume_item resume_hobby">
-            <div class="title">
-                <p class="bold">Hobby</p>
-            </div>
-            <ul>
-                <li><i class="fas fa-book"></i></li>
-                <li><i class="fas fa-gamepad"></i></li>
-                <li><i class="fas fa-music"></i></li>
-                <li><i class="fab fa-pagelines"></i></li>
-            </ul>
-        </div>
+
+
     </div>
 </div>
 
