--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
             <div class="title">
                 <p class="bold">About me</p>
             </div>
-            <p>Management of different projects and teams. Thanks to technical competencies, I successfully adapt past experience to work in the IT field.
+            <p>Obtaining, processing and analyzing cultural and social data
+Management of different projects and teams. Thanks to technical competencies, I successfully adapt past experience to work in the IT field.
                 <br>Responsible, motivated, sociable. I work effectively both in a team and independently.</p>
         </div>
         <div class="resume_item resume_work">
@@ -165,7 +166,7 @@
                         <p> Management and development of a <a
                                 href="https://www.figma.com/community/file/1035194220752043959">media product</a> for the Museum of the History of Religion (work in progress), Internship<br>
                             Organization of <a href="https://dh.itmo.ru/spbdhweek">IT Event</a>: 24 Workshops and Lectures, 780 total registrations<br>
-                            Working in the international media-project <a href="https://cultures-of-remembrance.com/">"Cultures of Remembrance" </a>(Berlin)<br>
+                            Working in the international media-project <a href="https://cultures-of-remembrance.com/">"Cultures of Remembrance" (Berlin)</a><br>
                             Management and development of a narrative telegram bot<br>
                             Supervising 4 groups of students in a creative technology course<br></p>
                     </div>
