--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="resume_item resume_info">
                 <div class="title">
                     <p class="bold">bulavkin danila</p>
-                    <p class="regular">DH researcher, Project manager, 23 y.o.</p>
+                    <p class="regular">Digital Humanities researcher, Project manager, 23 y.o.</p>
                 </div>
                 <ul>
                     <li>
@@ -99,7 +99,7 @@
                             <i class="fab fa-vk"></i>
                         </div>
                         <div class="data">
-                            <p class="semi-bold"><a href="https://vk.com/lovewill93">Vkontakte</a></p>
+                            <p class="semi-bold"><a class="soc" href="https://vk.com/lovewill93">Vkontakte</a></p>
                         </div>
                     </li>
                     <li>
@@ -107,7 +107,7 @@
                             <i class="fab fa-linkedin"></i>
                         </div>
                         <div class="data">
-                            <p class="semi-bold"><a href="https://www.linkedin.com/in/danilabulavkin">LinkedIn</a></p>
+                            <p class="semi-bold"><a class="soc" href="https://www.linkedin.com/in/danilabulavkin">LinkedIn</a></p>
                         </div>
                     </li>
                     <li>
@@ -115,10 +115,12 @@
                             <i class="fab fa-instagram"></i>
                         </div>
                         <div class="data">
-                            <p class="semi-bold"><a href="https://www.instagram.com/punckudellic/">Instagram</a></p>
+                            <p class="semi-bold"><a class="soc" href="https://www.instagram.com/punckudellic/">Instagram</a></p>
                         </div>
                     </li>
                 </ul>
+                <br>
+                <br>
                 <br>
                 <form action="https://t.me/DanilaBulavkin">
                     <button class="fun">Message me</button>
@@ -131,8 +133,7 @@
             <div class="title">
                 <p class="bold">About me</p>
             </div>
-            <p>Obtaining, processing and analyzing cultural and social data
-Management of different projects and teams. Thanks to technical competencies, I successfully adapt past experience to work in the IT field.
+            <p>Obtaining, processing and analyzing cultural and social data. Thanks to technical competencies, I successfully adapt humanities background to work in the IT field.
                 <br>Responsible, motivated, sociable. I work effectively both in a team and independently.</p>
         </div>
         <div class="resume_item resume_work">
@@ -166,7 +167,7 @@ Management of different projects and teams. Thanks to technical competencies, I 
                         <p> Management and development of a <a
                                 href="https://www.figma.com/community/file/1035194220752043959">media product</a> for the Museum of the History of Religion (work in progress), Internship<br>
                             Organization of <a href="https://dh.itmo.ru/spbdhweek">IT Event</a>: 24 Workshops and Lectures, 780 total registrations<br>
-                            Working in the international media-project <a href="https://cultures-of-remembrance.com/">"Cultures of Remembrance" (Berlin)</a><br>
+                            Working in the international media-project <a href="https://cultures-of-remembrance.com/">"Cultures of Remembrance" </a>(Berlin)<br>
                             Management and development of a narrative telegram bot<br>
                             Supervising 4 groups of students in a creative technology course<br></p>
                     </div>
@@ -194,6 +195,15 @@ Management of different projects and teams. Thanks to technical competencies, I 
                         <p>Data, Culture and Visualization (Cultural Analytics)</p>
                         <p>Participation in grant research projects (<a href="https://drive.google.com/drive/folders/1Cv1uXOTyI2d4WdtQoEgVLgNQ2CBNLNd-?usp=sharing">NLP, Data analysis,</a>
                             <a href="https://dh-abstracts.library.cmu.edu/works/9463">Computer Vision (Ottawa)</a>)</p>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="date">June-July 2021</div>
+                    <div class="info">
+                        <div class="info2"></div>
+                        <p class="semi-bold">Simbirsoft Intensive (Hackathon)</p>
+                        <p>AgroTech Application Development Management</p>
                     </div>
                 </li>
             </ul>
