--- a/index.html
+++ b/index.html
@@ -53,39 +53,24 @@
                 <ul>
                     <li>
                         <div class="skill_name">
-                            JIRA<br>Trello
+                            JIRA, Confluence, Trello
                         </div>
-                        <div class="skill_progress">
-                            <span style="width: 80%;"></span>
+
+                    </li>
+
+                    <li>
+                        <div class="skill_name">
+                            Tableau, Datawrapper, OpenRefine
+                            <br>
+                            <br>
+                            SQL, Pandas, NumPy (basics)
                         </div>
-                        <div class="skill_per">80%</div>
                     </li>
                     <li>
                         <div class="skill_name">
-                            PM
+                            Figma, Infogram, HTML, CSS
                         </div>
-                        <div class="skill_progress">
-                            <span style="width: 70%;"></span>
-                        </div>
-                        <div class="skill_per">70%</div>
-                    </li>
-                    <li>
-                        <div class="skill_name">
-                            Tableau
-                        </div>
-                        <div class="skill_progress">
-                            <span style="width: 60%;"></span>
-                        </div>
-                        <div class="skill_per">60%</div>
-                    </li>
-                    <li>
-                        <div class="skill_name">
-                            Figma
-                        </div>
-                        <div class="skill_progress">
-                            <span style="width: 60%;"></span>
-                        </div>
-                        <div class="skill_per">60%</div>
+
                     </li>
                 </ul>
             </div>
@@ -172,6 +157,16 @@
                             Supervising 4 groups of students in a creative technology course<br></p>
                     </div>
                 </li>
+                <li>
+                    <div class="date">2021 - Present</div>
+                    <div class="info">
+                        <div class="fourth"></div>
+                        <p class="semi-bold"><a href="https://vas3k.club/project/10399/">Buddy</a></p>
+                        <p> Co-founder of the mentoring project Buddy. Launching a Telegram bot and brand media on the Ghost engine.
+                            The project has already helped 200 schoolchildren and students find their mentor. The mentor base has about 70 regular participants.
+                        </p>
+                    </div>
+                </li>
             </ul>
         </div>
         <div class="resume_item resume_education">
@@ -181,13 +176,15 @@
             <ul>
                 <li>
                     <div class="date">2016-2020</div>
-                    <div class="info">
+                    <div class="info1">
                         <p class="semi-bold">Tomsk State University</p>
                         <p>Philosophy (Ontology and Theory of Knowledge)</p>
                         <p>Oxford Russian Scholarship Fund Fellow</p>
+                        <br>
                     </div>
                 </li>
                 <li>
+
                     <div class="date">2020 - 2022</div>
                     <div class="info">
                         <div class="info2"></div>
@@ -197,13 +194,20 @@
                             <a href="https://dh-abstracts.library.cmu.edu/works/9463">Computer Vision (Ottawa)</a>)</p>
                     </div>
                 </li>
-
                 <li>
                     <div class="date">June-July 2021</div>
                     <div class="info">
-                        <div class="info2"></div>
+                        <div class="info3"></div>
                         <p class="semi-bold">Simbirsoft Intensive (Hackathon)</p>
                         <p>AgroTech Application Development Management</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="date">November-December 2021</div>
+                    <div class="info">
+                            <div class="info4"></div>
+                        <p class="semi-bold">Scince Media (data journalism hackathon)</p>
+                        <p>Online stage finalist</p>
                     </div>
                 </li>
             </ul>
